--- a/src/pages/privacy.mdx
+++ b/src/pages/privacy.mdx
@@ -13,28 +13,28 @@ export const components = { p: Paragraph, h1: Heading };
 
     <div class="my-12"/>
 
-    # Personal information collected:
+    # 1. Personal information:
     We collect various types of personal information when you use our app, including your name, email address, phone number, and location data. We may also collect information about your device, including the hardware model, operating system version, and unique device identifiers.
 
-    # Data usage:
+    # 2. Data usage:
     We use the data collected to personalize your experience and provide relevant content. We may also use it for analytics purposes to understand how our app is being used and to improve the app.
 
-    # Data sharing:
+    # 3. Data sharing:
     We will not share your personal information with third parties unless we have your explicit consent or are required to do so by law. We may share aggregated, anonymous data with third parties for research and analytical purposes.
 
-    # Data retention:
+    # 4. Data retention:
     We will retain your personal information for as long as your account is active or as needed to provide you services. If you wish to cancel your account or request that we no longer use your information, please contact us.
 
-    # Data security:
+    # 5. Data security:
     We use appropriate security measures to protect against unauthorized access to or alteration of your personal information. We use encryption to protect sensitive information transmitted over the internet and we store data on secure servers. However, no method of transmission over the internet or method of electronic storage is 100% secure, so we cannot guarantee its absolute security.
 
-    # Third-party links:
+    # 6. Third-party links:
     Our app may contain links to third-party websites or services. We are not responsible for the privacy practices of these third parties and encourage you to read their privacy policies.
 
-    # Cookies:
+    # 7. Cookies:
     We use cookies to personalize your experience and track app usage. A cookie is a small data file that is stored on your device and allows us to recognize you when you return to our app. You can disable cookies in your device's settings at any time.
 
-    # Children's privacy:
+    # 8. Children's privacy:
     Our app is not intended for children under the age of 13. We do not knowingly collect personal information from children under the age of 13. If you are a parent or guardian and believe we have collected personal information from your child, please contact us.
 
     # Changes to this privacy policy:
